--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,7 @@
+
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+
 group 'dev.steenbakker.mobile_scanner'
 version '1.0-SNAPSHOT'
 
@@ -10,6 +14,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -19,9 +24,6 @@ rootProject.allprojects {
         mavenCentral()
     }
 }
-
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 32
